fix(search): prevent layout shift on search modal open, center modal

--- a/sass/_vendor.scss
+++ b/sass/_vendor.scss
@@ -1,6 +1,7 @@
 /* Vendor styles */
 html {
   font-size: clamp(16px, 1.2vw + 1px, 18px);
+  scrollbar-gutter: stable;
 }
 
 * {
